trunk/Archive2/0c/d5947ca22f7737/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In instantiation of 'void f(T) [with NoExplicit = int; T = int]':
main.cpp:11:13:   required from here
main.cpp:6:13: error: static assertion failed: fuck off
 void f(T) { static_assert(std::is_same<NoExplicit, detail::secret>(), "fuck off"); /* ... */ }
             ^
+ echo 20866
20866
